# FPS_Graph_Maker

./: .gitignore  .mergify.yml  CHANGELOG.md  FPS Grapher.spec  Pipfile  README.md  TODO.md  fps_2_chart.py  gui_pyqt.py  pyproject.toml  release.md  requirements.txt  test.ui  video2x_ui.ui
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release-linux.yml  release-windows.yml  release.yml
package/: main.py
src/: fps_2_chart.py  requirements.txt  setup.py
