[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["setuptools", "wheel", "Cython"]

[tool.poetry.dependencies]
python = "^3.8"
gooey = ">=1.0.8.1"
matplotlib = ">=3.3.4"
numpy = ">=1.20.1"
pandas = ">=1.2.3"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
flake8 = "*"
cython = "*"
pre-commit = "*"
pyinstaller = "*"
vermin = "*"