[tool.poetry]
name = "fps-graph-maker"
version = "0.9.0"
description = "Creates live FPS graphs from Elgato 4K Capture Utility CSV logs."
authors = ["HunterAP23 <etgarkaspi@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "fps_graph_maker"}]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
cython = ">=0.29.32"
gooey = ">=1.0.8.1"
matplotlib = ">=3.6.1"
numpy = ">=1.23.4"
pandas = ">=1.5.1"
setuptools = ">=65.5.0"
PySide6 = ">=6.4.0.1"

[tool.poetry.dev-dependencies]
black = ">=22.10.0"
isort = ">=5.10.1"
flake8 = ">=5.0.4"
pre-commit = ">=2.20.0"
pyinstaller = ">=5.6.1"
vermin = ">=1.4.2"
pyoxidizer = ">=0.22.0"

[build-system]
requires = ["poetry-core", "setuptools", "wheel", "Cython"]
build-backend = "poetry.core.masonry.api"
