[tool.poetry]
name = "fps-graph-maker"
version = "1.0.0"
prerelease = false
description = "Creates live FPS graphs from Elgato 4K Capture Utility CSV logs."
authors = ["HunterAP23 <etgarkaspi@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = []

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry.dependencies]
python = "^3.8,<3.12"
cython = "^0.29.32"
matplotlib = "^3.6.1"
numpy = "^1.23.4"
pandas = "^2.0.1"
setuptools = "^65.5.0"
PySide6 = "^6.4.0.1"
tqdm = "^4.64.1"
Gooey = ">=1.0.8.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^24.1.1"
isort = "^5.10.1"
flake8 = "^7.0.0"
pre-commit = "^2.20.0"
pyinstaller = "^6.0.0"
vermin = "^1.4.2"
pyoxidizer = "^0.22.0"

[build-system]
requires = ["poetry-core", "setuptools", "wheel", "Cython"]
build-backend = "poetry.core.masonry.api"
